# cloudflare-workers-containers-python-template

./: .dockerignore  .gitignore  Dockerfile  README.md  package.json  tsconfig.json  worker-configuration.d.ts  wrangler.jsonc
.github/workflows/: docker.yml
container_src/: Makefile  main.py  pyproject.toml
src/: index.ts
