[project]
name = "cloudflare-container-python"
version = "0.1.0"
description = "Python FastAPI container for Cloudflare Workers"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "httptools>=0.7.1",
    "loguru>=0.7.3",
    "uvicorn[standard]>=0.32.0",
    "uvloop>=0.22.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "ruff>=0.14.6",
]
